Test/dafny4/Regression0.dfy.expect
Regression0.dfy(7,12): Error: All elements of display must have some common supertype (got int, but needed type or type of previous elements is seq<char>)
Regression0.dfy(11,35): Error: arguments must have comparable types (got seq<char> and int)
2 resolution/type errors detected in Regression0.dfy
